migrate relationship between Response and ResponseElement from List to Set